--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
 		"@opentelemetry/exporter-prometheus": "^0.54.2",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.54.2",
 		"@opentelemetry/exporter-zipkin": "^1.27.0",
+		"@opentelemetry/instrumentation-express": "^0.45.0",
+		"@opentelemetry/instrumentation-http": "^0.55.0",
+		"@opentelemetry/instrumentation-mysql": "^0.43.0",
+		"@opentelemetry/instrumentation-nestjs-core": "^0.42.0",
 		"@opentelemetry/sdk-metrics": "^1.27.0",
 		"@opentelemetry/sdk-node": "^0.54.2",
 		"@opentelemetry/sdk-trace-node": "^1.27.0",
@@ -48,6 +52,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.11.4",
+		"nestjs-cls": "^4.4.1",
+		"opentelemetry-instrumentation-typeorm": "^0.41.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.8.1",
 		"typeorm": "^0.3.19",
