--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,9 +1,9 @@
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: 'test-project-db'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['db_metrics_exporter:9104']
 
-  - job_name: 'test-project-api'
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['host.docker.internal:9464']
+  # - job_name: 'test-project-api'
+  #   scrape_interval: 5s
+  #   static_configs:
+  #     - targets: ['host.docker.internal:9464']
